--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -9,7 +9,8 @@ compiler:
       - '@openzeppelin=OpenZeppelin/openzeppelin-contracts@3.4.0'
 dotenv: .env
 networks:
-  default: ganache-local
+  #default: ganache-local
+  default: development
   goerli:
     eth_usd_price_feed: '0xD4a33860578De61DBAbDc8BFdb98FD742fA7028e'
     verify: True
